--- a/index.html
+++ b/index.html
@@ -12,15 +12,19 @@
             <h2>ToDo-List <img src="images/todo-app.png"></h2>
             <div class="row">
                 <input type="text" id="input-box" placeholder="add your text">
-                <button>Add</button>
+                <button onclick="addTask()">Add</button>
             </div>
             <ul id="list-container">
-                <li>task 1</li>
+                <!--
+                 <li class="checked">task 1</li>
                 <li>task 2</li>
-                <li>task 3</li>
+                <li>task 3</li> 
+            -->
 
             </ul>
         </div>
     </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
